# DataDojo

./: Dockerfile.txt  README.md  __init__.py  client.py  dockerignore.txt  gitignore.txt  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  environment.py  genesis_engine_mk3.py  ruiner_engine_mk3.py
server/skeletons/: CustomerChurn.txt  HR-Employee-Attrition_Formatted.txt  WA_Fn-UseC_-HR-Employee-Attrition.txt  distributed_system_architecture_stress_dataset.txt  iot_telemetry_data.txt  online_retail.txt  telecom_customer_churn.txt  zara.txt
